<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="Mat3" Id="{ddd6c611-24bb-4302-8bfa-4e6f9f6bacfb}">
    <Declaration><![CDATA[TYPE Mat3 :
STRUCT
	data : ARRAY[0..2, 0..2] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>